--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Hw-8</title>
 </head>
 <body>
-    
+    <div class="layout">
+        <div class="layout__row">
+            <div class="layout__box layout__box--left"></div>
+            <div class="layout__box layout__box--right"></div>
+        </div>
+        <div class="layout__row">
+            <div class="layout__box layout__box--left"></div>
+            <div class="layout__box layout__box--right"></div>
+            <div class="layout__box layout__box--right"></div>
+            <div class="layout__box layout__box--right"></div>
+        </div>
+        <div class="layout__row">
+            <div class="layout__box layout__box--left"></div>
+            <div class="layout__box layout__box--left"></div>
+            <div class="layout__box layout__box--right"></div>
+            <div class="layout__box layout__box--right"></div>
+        </div>
+        <div class="layout__row block">
+            <div class="layout__container--right">            
+                <div class="layout__box layout__box--big"></div>
+                <div class="layout__box layout__box--right"></div>
+                <div class="layout__box layout__box--right"></div>
+            </div>
+        </div>
+        <div class="layout__row block">
+            <div class="layout__container--second-left">
+                <div class="layout__box layout__box--second-right"></div>
+            </div>
+            <div class="layout__container--second-right">
+                <div class="layout__box layout__box--left"></div>
+                <div class="layout__box layout__box--bottom"></div>
+            </div>
+        </div>        
+    </div>
 </body>
 </html>
