--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="layout__row block">
             <div class="layout__container--right">            
-                <div class="layout__box layout__box--big"></div>
+                <div class="layout__box layout__box--big layout__box--left"></div>
                 <div class="layout__box layout__box--right"></div>
                 <div class="layout__box layout__box--right"></div>
             </div>
